feat(i18n): progress on ClassManagement translation (page header, tabs, modal, Classes tab filters)
- Translated page header and back button
- Translated main tabs navigation (Classes, Instructors, Schedule)
- Translated Class Modal: title, form labels, placeholders, difficulty levels, categories
- Translated schedule builder: day checkboxes, time inputs, helper text
- Translated Classes tab: stats cards, section title, last updated, refresh button
- Translated search placeholder and filter dropdowns (category, status)
- Added missing translation keys: scheduleHelper, setTimeHelper, timeTo, refresh
- Day names now use dynamic translation keys for proper localization
- All 3 languages updated (en, az, ru)

Work in progress: continuing with class cards, instructor tab, schedule tab

--- a/frontend/public/locales/az/translation.json
+++ b/frontend/public/locales/az/translation.json
@@ -686,6 +686,7 @@
         "title": "İdman Zalı Sinifləri Idarəetməsi",
         "lastUpdated": "Son yenilənmə: {{time}}",
         "addButton": "Yeni Sinif Əlavə Et",
+        "refresh": "Yenilə",
         "stats": {
           "totalClasses": "Ümumi Siniflər",
           "activeClasses": "Aktiv Siniflər",
@@ -753,10 +754,13 @@
           "status": "Status",
           "instructors": "Təlimçilər",
           "schedule": "Sinif Cədvəli",
+          "scheduleHelper": "Həftə günlərini seçin və təkrarlanan siniflər üçün vaxt təyin edin (24 saatlıq format)",
+          "setTimeHelper": "Seçilmiş günlər üçün vaxt təyin edin (24 saatlıq format)",
           "addScheduleSlot": "Cədvəl Slotu Əlavə Et",
           "dayOfWeek": "Gün",
           "startTime": "Başlama Vaxtı",
           "endTime": "Bitmə Vaxtı",
+          "timeTo": "-dən",
           "removeSlot": "Sil"
         },
         "actions": {
