--- a/frontend/public/locales/ru/translation.json
+++ b/frontend/public/locales/ru/translation.json
@@ -686,6 +686,7 @@
         "title": "Управление Классами Зала",
         "lastUpdated": "Последнее обновление: {{time}}",
         "addButton": "Добавить Новый Класс",
+        "refresh": "Обновить",
         "stats": {
           "totalClasses": "Всего Классов",
           "activeClasses": "Активных Классов",
@@ -753,10 +754,13 @@
           "status": "Статус",
           "instructors": "Инструкторы",
           "schedule": "Расписание Класса",
+          "scheduleHelper": "Выберите дни недели и установите время для повторяющихся занятий (24-часовой формат)",
+          "setTimeHelper": "Установите время для выбранных дней (24-часовой формат)",
           "addScheduleSlot": "Добавить Слот Расписания",
           "dayOfWeek": "День",
           "startTime": "Время Начала",
           "endTime": "Время Окончания",
+          "timeTo": "до",
           "removeSlot": "Удалить"
         },
         "actions": {
