--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -686,6 +686,7 @@
         "title": "Gym Classes Management",
         "lastUpdated": "Last updated: {{time}}",
         "addButton": "Add New Class",
+        "refresh": "Refresh",
         "stats": {
           "totalClasses": "Total Classes",
           "activeClasses": "Active Classes",
@@ -753,10 +754,13 @@
           "status": "Status",
           "instructors": "Instructors",
           "schedule": "Class Schedule",
+          "scheduleHelper": "Select weekdays and set time for recurring classes (24-hour format)",
+          "setTimeHelper": "Set time for selected days (24-hour format)",
           "addScheduleSlot": "Add Schedule Slot",
           "dayOfWeek": "Day",
           "startTime": "Start Time",
           "endTime": "End Time",
+          "timeTo": "to",
           "removeSlot": "Remove"
         },
         "actions": {
