feat(i18n): complete Classes tab translation in ClassManagement
- Translated all class card elements:
  * Status badges (active, inactive) with dynamic translation
  * Duration display with 'minutes' translation
  * Spots left counter with pluralization support
  * Instructors section label and 'no instructors' message
  * Weekly schedule label
  * All action button tooltips and text (Assign, Edit, Delete)

- Added new translation keys:
  * spotsLeft: '{{count}} spots left' (en), '{{count}} yer qalıb' (az), '{{count}} мест осталось' (ru)
  * noInstructors: Localized 'no instructors assigned' message

- All 3 languages updated consistently
- Classes tab now fully translated and functional

Remaining: Instructors tab, Schedule tab, all modals, date formatters

--- a/frontend/public/locales/az/translation.json
+++ b/frontend/public/locales/az/translation.json
@@ -708,6 +708,8 @@
           "active": "Aktiv",
           "inactive": "Qeyri-aktiv"
         },
+        "spotsLeft": "{{count}} yer qalıb",
+        "noInstructors": "Təlimçi təyin edilməyib",
         "table": {
           "nameColumn": "Sinif Adı",
           "categoryColumn": "Kateqoriya",
