--- a/frontend/public/locales/ru/translation.json
+++ b/frontend/public/locales/ru/translation.json
@@ -708,6 +708,8 @@
           "active": "Активный",
           "inactive": "Неактивный"
         },
+        "spotsLeft": "{{count}} мест осталось",
+        "noInstructors": "Инструкторы не назначены",
         "table": {
           "nameColumn": "Название Класса",
           "categoryColumn": "Категория",
